# -RDKX5-

./: README.md  README_cn.md
上位机程序/mobile_manipulator_station/: CMakeLists.txt  README.md  linux_requirements.txt  package.xml  windows_requirements.txt
上位机程序/mobile_manipulator_station/config/: mobile_manipulator_station.rviz  ssh_targets.yaml  station_client.yaml
上位机程序/mobile_manipulator_station/launch/: station_bringup.launch.py
上位机程序/mobile_manipulator_station/scripts/: build_station_exe.bat  install_rdk_rosbridge_autostart.sh  rviz_click_router.py  setup_ssh_keys.py  start_station_linux.sh  start_station_windows.bat  station_gui.py
上位机程序/mobile_manipulator_station/scripts/viewer/: __init__.py  robot_3d_view.py
小车程序/: build_all.sh
小车程序/car_mission_system/: CMakeLists.txt  README.md  package.xml
小车程序/car_mission_system/config/: README.md
小车程序/car_mission_system/launch/: car_bringup.launch.py  car_nav.launch.py
小车程序/car_mission_system/scripts/: coverage_path_planner.py  mission_manager.py  region_goal_sender.py  station_map_relay.py
小车程序/robot_rtab/: CMakeLists.txt  package.xml  建图程序框架图.md
小车程序/robot_rtab/behavior_trees/: navigate_through_poses_no_backup.xml
小车程序/robot_rtab/launch/: rtabmap_localization.launch.py  slam_rtab.launch.py  wheeltec_nav2_rtab.launch.py
小车程序/robot_rtab/params/: rtabmap_nav_params.yaml
小车程序/robot_rtab/scripts/: rtabmap_map_bridge.py
小车程序/turn_on_lidar/: CMakeLists.txt
小车程序/turn_on_lidar/config/: wheeltec_param.yaml
小车程序/turn_on_lidar/launch/: wheeltec_lidar.launch.py
小车程序/turn_on_lidar/scripts/: directional_scan_filter.py
小车程序/turn_on_robot/config/: wheeltec_param.yaml
小车程序/wheeltec_nav2/param/wheeltec_params/: param_R550A_PLUS_4wd_arm.yaml
小车程序/wheeltec_rrt2/behaviour_trees/: navigate_w_replanning_time.xml
机械臂程序/arm_mission_system/: CMakeLists.txt  README.md  package.xml
机械臂程序/arm_mission_system/config/: README.md  grasp_profiles.yaml
机械臂程序/arm_mission_system/launch/: arm_bringup.launch.py
机械臂程序/arm_mission_system/scripts/: base_pick_assistant.py  debug_grasp_garbage.py  grasp_executor.py  grasp_hw_bridge.py  mock_camera_target.py  mono_trash_detector.py
机械臂程序/arm_mission_system/src/: grasp_executor_cpp.cpp
机械臂程序/jetcobot_garbage_yolov11/: Garbage_identification.ipynb  Garbage_sorting.ipynb  Garbage_sorting.py  Garbage_stacking.ipynb  XYT_config.txt  garbage_identify.py  garbage_identify.py.bak  single_garbage_identify.py
机械臂程序/jetcobot_utils/: package.xml  setup.py
机械臂程序/jetcobot_utils/src/jetcobot_utils/: grasp_controller.py
